Point to styles.css from node_modules

--- a/apps/storybook/src/styles.css
+++ b/apps/storybook/src/styles.css
@@ -1,5 +1,1 @@
-@import '@harnessio/canary/themes';
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import '../node_modules/@harnessio/canary/src/styles.css';
