--- a/packages/playground/public/styles.css
+++ b/packages/playground/public/styles.css
@@ -633,6 +633,10 @@ body {
   background-color: hsl(var(--background));
 }
 
+.bg-primary {
+  background-color: hsl(var(--primary));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1004,4 +1008,18 @@ body {
   --tw-scale-x: 1;
   --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+@media (min-width: 768px) {
+  .md\:h-screen {
+    height: 100vh;
+  }
+
+  .md\:min-w-56 {
+    min-width: 14rem;
+  }
+
+  .md\:p-5 {
+    padding: 1.25rem;
+  }
 }
