delete original css

--- a/packages/playground/public/styles.css
+++ b/packages/playground/public/styles.css
@@ -591,6 +591,14 @@ body {
   height: 660px;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-\[1\.2rem\] {
   width: 1.2rem;
 }
@@ -633,12 +641,24 @@ body {
   background-color: hsl(var(--background));
 }
 
-.bg-primary {
-  background-color: hsl(var(--primary));
+.p-0 {
+  padding: 0px;
 }
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-5 {
+  padding: 1.25rem;
+}
+
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
+
+.pt-10 {
+  padding-top: 2.5rem;
 }
 
 .text-destructive {
@@ -1011,15 +1031,7 @@ body {
 }
 
 @media (min-width: 768px) {
-  .md\:h-screen {
-    height: 100vh;
-  }
-
   .md\:min-w-56 {
     min-width: 14rem;
-  }
-
-  .md\:p-5 {
-    padding: 1.25rem;
   }
 }
