--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 300 600; /* Supports weights from 300 to 600 */
+  src: url('/fonts/InterVariable.ttf') format('truetype');
+}
+
 :root {
   /* PP Figma shades */
   --black: 210 10% 3%;
