fixing other colors for execution details page

--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -28,6 +28,7 @@
   --grey-94: 210 6% 94%;
   --grey-98: 210 6% 98%;
   --grey-100: 240, 6%, 10%;
+  --grey-101: 240, 6%, 30%;
   --grey-102: 240, 6%, 40%;
   --grey-104: 240 6% 50%;
   --grey-105: 240, 6%, 60%;
@@ -109,6 +110,7 @@
     --git: var(-grey-108);
     --git-background: var(--grey-100);
     --status: var(--grey-105);
+    --log: var(--grey-101);
   }
 }
 
