idea for layout for jessie to consider

--- a/packages/playground/src/styles.css
+++ b/packages/playground/src/styles.css
@@ -1,3 +1,11 @@
 @import '@harnessio/canary/src/styles.css';
 @import '@harnessio/unified-pipeline/dist/style.css';
 @import '@harnessio/unified-pipeline/src/styles.css';
+
+body {
+  @apply overflow-hidden;
+}
+
+#root {
+  @apply h-screen w-screen;
+}
