--- a/packages/playground/src/styles.css
+++ b/packages/playground/src/styles.css
@@ -1,3 +1,53 @@
 @import '@harnessio/canary/src/styles.css';
 @import '@harnessio/unified-pipeline/dist/style.css';
 @import '@harnessio/unified-pipeline/src/styles.css';
+
+@import 'highlight.js/styles/github.css';
+/* @import '@git-diff-view/react/tailwind.css'; */
+
+.diff-style-root tr {
+  content-visibility: auto;
+}
+
+.diff-widget-tooltip {
+  position: relative;
+}
+
+.diff-widget-tooltip::after {
+  display: none;
+  box-sizing: border-box;
+  background-color: #555555;
+  position: absolute;
+  content: attr(data-title);
+  font-size: 11px;
+  padding: 1px 2px;
+  border-radius: 4px;
+  overflow: hidden;
+  top: 50%;
+  z-index: 20;
+  white-space: nowrap;
+  transform: translateY(-50%);
+  left: calc(100% + 8px);
+  color: #ffffff;
+}
+
+.diff-widget-tooltip::before {
+  display: none;
+  box-sizing: border-box;
+  content: '';
+  position: absolute;
+  top: 50%;
+  z-index: 20;
+  left: calc(100% - 2px);
+  transform: translateY(-50%);
+  border: 6px solid transparent;
+  border-right-color: #555555;
+}
+
+.diff-widget-tooltip:hover::before {
+  display: block;
+}
+
+.diff-widget-tooltip:hover::after {
+  display: block;
+}
