--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -30,10 +30,10 @@
   --white: 0 0% 100%;
 
   /* PP Figma secondary colors */
-  --mint: 175 60% 65%;
-  --blue: 216 80% 65%;
+  --mint: 175, 60%, 65%;
+  --blue: 216, 80%, 65%;
   --orange: 35, 75%, 55%;
-  --purple: 275 60% 75%;
+  --purple: 275, 60%, 75%;
   --green: 150, 75%, 65%;
   --red: 0, 80%, 65%;
 }
