--- a/apps/gitness/src/styles.css
+++ b/apps/gitness/src/styles.css
@@ -1,2 +1,3 @@
-@import '@harnessio/playground/src/styles.css';
-@import '@harnessio/canary/src/styles.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
