--- a/packages/playground/src/styles.css
+++ b/packages/playground/src/styles.css
@@ -1,6 +1,6 @@
-@import '@harnessio/canary/src/styles.css';
-@import '@harnessio/unified-pipeline/dist/style.css';
-@import '@harnessio/unified-pipeline/src/styles.css';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @import 'highlight.js/styles/github.css';
 /* @import '@git-diff-view/react/tailwind.css'; */
