--- a/apps/gitness/src/styles.css
+++ b/apps/gitness/src/styles.css
@@ -1,3 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import '@harnessio/playground/dist/styles.css';
+@import '@harnessio/unified-pipeline/dist/style.css';
+@import '@harnessio/canary/dist/styles.css';
