fix: build changes for harness

--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -2,140 +2,140 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
+/* @font-face {
   font-family: 'Inter';
   font-style: normal;
-  font-weight: 300 600; /* Supports weights from 300 to 600 */
+  font-weight: 300 600; 
   src: url('/fonts/InterVariable.ttf') format('truetype');
-}
+} */
 
 :root {
   /* PP Figma shades */
-  --black: 240 10% 3%;
-  --grey-6: 240 8% 6%;
-  --grey-8: 240 7% 8%;
-  --grey-10: 240 6% 10%;
-  --grey-12: 240 6% 12%;
-  --grey-15: 240 6% 15%;
-  --grey-20: 240 6% 20%;
-  --grey-30: 240 6% 30%;
-  --grey-40: 240 6% 40%;
-  --grey-50: 240 6% 50%;
-  --grey-60: 240 6% 60%;
-  --grey-70: 240 6% 70%;
-  --grey-80: 240 6% 80%;
-  --grey-90: 240 6% 90%;
-  --grey-94: 240 6% 94%;
-  --grey-98: 240 6% 98%;
-  --white: 0 0% 100%;
+  --canary-black: 240 10% 3%;
+  --canary-grey-6: 240 8% 6%;
+  --canary-grey-8: 240 7% 8%;
+  --canary-grey-10: 240 6% 10%;
+  --canary-grey-12: 240 6% 12%;
+  --canary-grey-15: 240 6% 15%;
+  --canary-grey-20: 240 6% 20%;
+  --canary-grey-30: 240 6% 30%;
+  --canary-grey-40: 240 6% 40%;
+  --canary-grey-50: 240 6% 50%;
+  --canary-grey-60: 240 6% 60%;
+  --canary-grey-70: 240 6% 70%;
+  --canary-grey-80: 240 6% 80%;
+  --canary-grey-90: 240 6% 90%;
+  --canary-grey-94: 240 6% 94%;
+  --canary-grey-98: 240 6% 98%;
+  --canary-white: 0 0% 100%;
 
   /* PP Figma secondary colors */
-  --mint: 175 60% 65%;
-  --blue: 216 80% 65%;
-  --orange: 35, 75%, 55%;
-  --purple: 275 60% 75%;
-  --green: 150, 75%, 65%;
-  --red: 0, 80%, 65%;
+  --canary-mint: 175 60% 65%;
+  --canary-blue: 216 80% 65%;
+  --canary-orange: 35, 75%, 55%;
+  --canary-purple: 275 60% 75%;
+  --canary-green: 150, 75%, 65%;
+  --canary-red: 0, 80%, 65%;
 }
 
 @layer themes {
   /* TODO: replace hsl with variables for theming */
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-background: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --primary-muted: var(--grey-70);
-    --primary-accent: 216 100% 60%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --secondary-background: 0 0% 100%;
-    --secondary-muted: var(--grey-40);
-    --tertiary: 240 4.8% 95.9%;
-    --tertiary-foreground: 240 5.9% 10%;
-    --tertiary-background: 240 6% 60%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --border-background: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --input-background: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
-    --radius: 0.5rem;
-    --success: var(--green);
-    --error: var(--red);
-    --warning: var(--orange);
-    --ai: var(--purple);
-    --ai-button-stop-1: 36 60% 95%;
-    --ai-button-stop-2: 335 58% 76%;
-    --ai-button-stop-3: 246 66% 72%;
-    --ai-button-stop-4: 188 97% 89%;
-    --diff-grey: hsl(0, 0%, 33%);
-    --diff-add-content--: hsl(156, 28%, 10%);
-    --diff-del-content--: hsl(356, 28%, 11%);
-    --diff-add-lineNumber--: hsl(153, 40%, 14%);
-    --diff-del-lineNumber--: hsl(358, 39%, 17%);
-    --diff-plain-content--: var(--background);
-    --diff-expand-content--: var(--background);
-    --diff-plain-lineNumber--: var(--background);
-    --diff-plain-lineNumber-color--: hsl(0, 0%, 100%);
-    --diff-hunk-content--: hsl(218, 26%, 12%);
-    --diff-hunk-lineNumber--: hsl(218, 26%, 12%);
-    --diff-add-content-highlight--: hsl(152, 37%, 24%);
-    --diff-del-content-highlight--: hsl(0, 38%, 26%);
-    --diff-add-widget--: hsl(216, 80%, 65%);
-    --diff-add-widget-color--: hsl(0, 0%, 100%);
-    --diff-empty-content--: var(--background);
-    --diff-hunk-content-color--: hsl(0, 0%, 100%);
+    --canary-background: 0 0% 100%;
+    --canary-foreground: 240 10% 3.9%;
+    --canary-card: 0 0% 100%;
+    --canary-card-foreground: 240 10% 3.9%;
+    --canary-popover: 0 0% 100%;
+    --canary-popover-foreground: 240 10% 3.9%;
+    --canary-primary: 240 5.9% 10%;
+    --canary-primary-background: 240 5.9% 10%;
+    --canary-primary-foreground: 0 0% 98%;
+    --canary-primary-muted: var(--canary-grey-70);
+    --canary-primary-accent: 216 100% 60%;
+    --canary-secondary: 240 4.8% 95.9%;
+    --canary-secondary-foreground: 240 5.9% 10%;
+    --canary-secondary-background: 0 0% 100%;
+    --canary-secondary-muted: var(--canary-grey-40);
+    --canary-tertiary: 240 4.8% 95.9%;
+    --canary-tertiary-foreground: 240 5.9% 10%;
+    --canary-tertiary-background: 240 6% 60%;
+    --canary-muted: 240 4.8% 95.9%;
+    --canary-muted-foreground: 240 3.8% 46.1%;
+    --canary-accent: 240 4.8% 95.9%;
+    --canary-accent-foreground: 240 5.9% 10%;
+    --canary-destructive: 0 84.2% 60.2%;
+    --canary-destructive-foreground: 0 0% 98%;
+    --canary-border: 240 5.9% 90%;
+    --canary-border-background: 240 5.9% 90%;
+    --canary-input: 240 5.9% 90%;
+    --canary-input-background: 240 5.9% 90%;
+    --canary-ring: 240 5.9% 10%;
+    --canary-radius: 0.5rem;
+    --canary-success: var(--canary-green);
+    --canary-error: var(--canary-red);
+    --canary-warning: var(--canary-orange);
+    --canary-ai: var(--canary-purple);
+    --canary-ai-button-stop-1: 36 60% 95%;
+    --canary-ai-button-stop-2: 335 58% 76%;
+    --canary-ai-button-stop-3: 246 66% 72%;
+    --canary-ai-button-stop-4: 188 97% 89%;
+    --canary-diff-grey: hsl(0, 0%, 33%);
+    --canary-diff-add-content--: hsl(156, 28%, 10%);
+    --canary-diff-del-content--: hsl(356, 28%, 11%);
+    --canary-diff-add-lineNumber--: hsl(153, 40%, 14%);
+    --canary-diff-del-lineNumber--: hsl(358, 39%, 17%);
+    --canary-diff-plain-content--: var(--canary-background);
+    --canary-diff-expand-content--: var(--canary-background);
+    --canary-diff-plain-lineNumber--: var(--canary-background);
+    --canary-diff-plain-lineNumber-color--: hsl(0, 0%, 100%);
+    --canary-diff-hunk-content--: hsl(218, 26%, 12%);
+    --canary-diff-hunk-lineNumber--: hsl(218, 26%, 12%);
+    --canary-diff-add-content-highlight--: hsl(152, 37%, 24%);
+    --canary-diff-del-content-highlight--: hsl(0, 38%, 26%);
+    --canary-diff-add-widget--: hsl(216, 80%, 65%);
+    --canary-diff-add-widget-color--: hsl(0, 0%, 100%);
+    --canary-diff-empty-content--: var(--canary-background);
+    --canary-diff-hunk-content-color--: hsl(0, 0%, 100%);
   }
 
   .dark {
-    --background: var(--grey-6);
-    --foreground: var(--grey-94);
-    --card: var(--grey-10);
-    --card-foreground: var(--white);
-    --popover: var(--grey-10);
-    --popover-foreground: var(--white);
-    --primary: var(--white);
-    --primary-background: var(--black);
-    --primary-foreground: var(--grey-10);
-    --primary-muted: var(--grey-70);
-    --primary-accent: 216 100% 60%;
-    --secondary: var(--grey-15);
-    --secondary-foreground: var(--white);
-    --secondary-background: var(--grey-6);
-    --secondary-muted: var(--grey-40);
-    --tertiary: var(--grey-12);
-    --tertiary-foreground: var(--white);
-    --tertiary-background: var(--grey-60);
-    --muted: var(--grey-15);
-    --muted-foreground: var(--grey-60);
-    --accent: var(--grey-15);
-    --accent-foreground: var(--white);
-    --destructive: var(--red);
-    --destructive-foreground: var(--white);
-    --border: var(--grey-15);
-    --border-background: var(--grey-10);
-    --input: var(--grey-15);
-    --input-background: var(--grey-10);
-    --ring: var(--grey-80);
-    --success: var(--green);
-    --error: var(--red);
-    --warning: var(--orange);
-    --ai: var(--purple);
-    --ai-button-stop-1: 36 60% 95%;
-    --ai-button-stop-2: 335 58% 76%;
-    --ai-button-stop-3: 246 66% 72%;
-    --ai-button-stop-4: 188 97% 89%;
+    --canary-background: var(--canary-grey-6);
+    --canary-foreground: var(--canary-grey-94);
+    --canary-card: var(--canary-grey-10);
+    --canary-card-foreground: var(--canary-white);
+    --canary-popover: var(--canary-grey-10);
+    --canary-popover-foreground: var(--canary-white);
+    --canary-primary: var(--canary-white);
+    --canary-primary-background: var(--canary-black);
+    --canary-primary-foreground: var(--canary-grey-10);
+    --canary-primary-muted: var(--canary-grey-70);
+    --canary-primary-accent: 216 100% 60%;
+    --canary-secondary: var(--canary-grey-15);
+    --canary-secondary-foreground: var(--canary-white);
+    --canary-secondary-background: var(--canary-grey-6);
+    --canary-secondary-muted: var(--canary-grey-40);
+    --canary-tertiary: var(--canary-grey-12);
+    --canary-tertiary-foreground: var(--canary-white);
+    --canary-tertiary-background: var(--canary-grey-60);
+    --canary-muted: var(--canary-grey-15);
+    --canary-muted-foreground: var(--canary-grey-60);
+    --canary-accent: var(--canary-grey-15);
+    --canary-accent-foreground: var(--canary-white);
+    --canary-destructive: var(--canary-red);
+    --canary-destructive-foreground: var(--canary-white);
+    --canary-border: var(--canary-grey-15);
+    --canary-border-background: var(--canary-grey-10);
+    --canary-input: var(--canary-grey-15);
+    --canary-input-background: var(--canary-grey-10);
+    --canary-ring: var(--canary-grey-80);
+    --canary-success: var(--canary-green);
+    --canary-error: var(--canary-red);
+    --canary-warning: var(--canary-orange);
+    --canary-ai: var(--canary-purple);
+    --canary-ai-button-stop-1: 36 60% 95%;
+    --canary-ai-button-stop-2: 335 58% 76%;
+    --canary-ai-button-stop-3: 246 66% 72%;
+    --canary-ai-button-stop-4: 188 97% 89%;
   }
 }
 
