--- a/packages/views/public/styles.css
+++ b/packages/views/public/styles.css
@@ -274,6 +274,7 @@
 }
 
 .react-flow__panel {
+  left: auto !important;
   right: 0px !important;
   display: flex !important;
 }
@@ -1678,18 +1679,13 @@ body {
   inset: 0px;
 }
 
-.inset-px {
+.inset-\[1px\] {
   inset: 1px;
 }
 
 .inset-x-0 {
   left: 0px;
   right: 0px;
-}
-
-.inset-x-auto {
-  left: auto;
-  right: auto;
 }
 
 .inset-y-0 {
@@ -1765,6 +1761,10 @@ body {
   left: 50%;
 }
 
+.left-auto {
+  left: auto;
+}
+
 .left-full {
   left: 100%;
 }
@@ -1787,6 +1787,10 @@ body {
 
 .right-4 {
   right: 1rem;
+}
+
+.right-auto {
+  right: auto;
 }
 
 .right-full {
@@ -1813,6 +1817,10 @@ body {
   top: 1rem;
 }
 
+.top-\[1px\] {
+  top: 1px;
+}
+
 .top-\[50\%\] {
   top: 50%;
 }
@@ -1823,10 +1831,6 @@ body {
 
 .top-full {
   top: 100%;
-}
-
-.top-px {
-  top: 1px;
 }
 
 .z-0 {
@@ -2049,46 +2053,6 @@ body {
   aspect-ratio: 1 / 1;
 }
 
-.size-2 {
-  width: 0.5rem;
-  height: 0.5rem;
-}
-
-.size-2\.5 {
-  width: 0.625rem;
-  height: 0.625rem;
-}
-
-.size-3 {
-  width: 0.75rem;
-  height: 0.75rem;
-}
-
-.size-3\.5 {
-  width: 0.875rem;
-  height: 0.875rem;
-}
-
-.size-4 {
-  width: 1rem;
-  height: 1rem;
-}
-
-.size-7 {
-  width: 1.75rem;
-  height: 1.75rem;
-}
-
-.size-9 {
-  width: 2.25rem;
-  height: 2.25rem;
-}
-
-.size-\[4px\] {
-  width: 4px;
-  height: 4px;
-}
-
 .size-full {
   width: 100%;
   height: 100%;
@@ -2120,6 +2084,14 @@ body {
 
 .h-2\.5 {
   height: 0.625rem;
+}
+
+.h-3 {
+  height: 0.75rem;
+}
+
+.h-3\.5 {
+  height: 0.875rem;
 }
 
 .h-4 {
@@ -2172,6 +2144,10 @@ body {
 
 .h-\[44px\] {
   height: 44px;
+}
+
+.h-\[4px\] {
+  height: 4px;
 }
 
 .h-\[55px\] {
@@ -2246,6 +2222,10 @@ body {
   width: 0.75rem;
 }
 
+.w-3\.5 {
+  width: 0.875rem;
+}
+
 .w-3\/4 {
   width: 75%;
 }
@@ -2304,6 +2284,10 @@ body {
 
 .w-\[220px\] {
   width: 220px;
+}
+
+.w-\[4px\] {
+  width: 4px;
 }
 
 .w-\[5px\] {
@@ -2843,8 +2827,16 @@ body {
   border-top-right-radius: 0.375rem;
 }
 
+.rounded-tl-md {
+  border-top-left-radius: 0.375rem;
+}
+
 .rounded-tl-sm {
   border-top-left-radius: 0.125rem;
+}
+
+.rounded-tr-md {
+  border-top-right-radius: 0.375rem;
 }
 
 .border {
@@ -5564,9 +5556,12 @@ body {
   padding-right: 0.5rem;
 }
 
-.\[\&_\[cmdk-input-wrapper\]_svg\]\:size-5 [cmdk-input-wrapper] svg {
-  width: 1.25rem;
+.\[\&_\[cmdk-input-wrapper\]_svg\]\:h-5 [cmdk-input-wrapper] svg {
   height: 1.25rem;
+}
+
+.\[\&_\[cmdk-input-wrapper\]_svg\]\:w-5 [cmdk-input-wrapper] svg {
+  width: 1.25rem;
 }
 
 .\[\&_\[cmdk-input\]\]\:h-12 [cmdk-input] {
@@ -5583,9 +5578,12 @@ body {
   padding-bottom: 0.75rem;
 }
 
-.\[\&_\[cmdk-item\]_svg\]\:size-5 [cmdk-item] svg {
-  width: 1.25rem;
+.\[\&_\[cmdk-item\]_svg\]\:h-5 [cmdk-item] svg {
   height: 1.25rem;
+}
+
+.\[\&_\[cmdk-item\]_svg\]\:w-5 [cmdk-item] svg {
+  width: 1.25rem;
 }
 
 .\[\&_p\]\:leading-relaxed p {
