--- a/packages/canary/src/styles.css
+++ b/packages/canary/src/styles.css
@@ -11,11 +11,11 @@
 
 :root {
   /* PP Figma shades */
-  --black: 240 10% 3%;
-  --grey-6: 240 8% 6%;
+  --black: 240 12% 3%;
+  --grey-6: 240 6% 6%;
   --grey-8: 240 7% 8%;
   --grey-10: 240 6% 10%;
-  --grey-12: 240 6% 12%;
+  --grey-12: 240 5% 11%;
   --grey-15: 240 6% 15%;
   --grey-20: 240 6% 20%;
   --grey-30: 240 6% 30%;
@@ -25,51 +25,59 @@
   --grey-70: 240 6% 70%;
   --grey-80: 240 6% 80%;
   --grey-90: 240 6% 90%;
-  --grey-94: 240 6% 94%;
-  --grey-98: 240 6% 98%;
+  --grey-94: 240 7% 94%;
+  --grey-96: 0 0% 96%;
+  --grey-98: 0 0% 98%;
   --white: 0 0% 100%;
 
+  --red-65: 0 79% 64%;
+  --orange-55: 35 74% 54%;
+  --green-65: 150 75% 65%;
+  --blue-60: 215 100% 60%;
+
   /* PP Figma secondary colors */
-  --mint: 175 60% 65%;
-  --blue: 216 80% 65%;
-  --orange: 35, 75%, 55%;
-  --purple: 275, 60%, 75%;
-  --green: 150, 75%, 65%;
-  --red: 0, 80%, 65%;
+  /* TODO: remove it */
+  --mint: 165 49% 53%;
+  --blue: 210 100% 60%;
+  --orange: 33 100% 61%;
+  --purple: 280 100% 75%;
+  --green: 146 63% 50%;
+  --red: 0 100% 60%;
 }
 
 @layer themes {
-  /* TODO: replace hsl with variables for theming */
+  /* TODO: replace colors variables for theming */
   :root {
     --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --foreground: 225 18% 4%;
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card-foreground: 225 18% 4%;
     --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: var(--black);
-    --primary-background: var(--white);
-    --primary-foreground: var(--grey-98);
-    --primary-muted: var(--grey-60);
-    --primary-accent: 216 100% 60%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+    --popover-foreground: 225 18% 4%;
+    --primary: 228 9% 10%;
+    --primary-background: 228 9% 10%;
+    --primary-foreground: 0 0% 98%;
+    --primary-muted: var(--grey-70);
+    --primary-accent: 207 100% 61%;
+    --secondary: 240 4% 95%;
+    --secondary-foreground: 228 9% 10%;
     --secondary-background: 0 0% 100%;
     --secondary-muted: var(--grey-40);
-    --tertiary: 240 4.8% 95.9%;
-    --tertiary-foreground: 240 5.9% 10%;
-    --tertiary-background: 240 6% 60%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
+    --tertiary: 240 4% 95%;
+    --tertiary-foreground: 228 9% 10%;
+    --tertiary-background: 0 0% 40%;
+    --tertiary-muted: var(--grey-8);
+    --muted: 240 4% 95%;
+    --muted-foreground: 240 4% 45%;
+    --accent: 240 4% 95%;
+    --accent-foreground: 228 9% 10%;
+    --destructive: 0 68% 53%;
     --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --border-background: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --input-background: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
+    --border: 0 0% 90%;
+    --border-background: 0 0% 90%;
+    --input: 0 0% 90%;
+    --input-background: 0 0% 90%;
+    --ring: 228 9% 10%;
     --radius: 0.5rem;
     --success: var(--green);
     --error: var(--red);
@@ -97,6 +105,96 @@
     --diff-add-widget-color--: hsl(0, 0%, 100%);
     --diff-empty-content--: var(--background);
     --diff-hunk-content-color--: hsl(0, 0%, 100%);
+    /* New colors design variables */
+    /* Text */
+    --foreground-01: var(--white);
+    --foreground-02: var(--grey-80);
+    --foreground-03: var(--grey-70);
+    --foreground-04: var(--grey-60);
+    --foreground-05: var(--grey-50);
+    --foreground-06: var(--black);
+    --foreground-07: var(--grey-40);
+    --foreground-08: var(--grey-90);
+    --foreground-09: var(--grey-30);
+    --foreground-danger: var(--red-65);
+    --foreground-alert: var(--orange-55);
+    --foreground-success: var(--green-65);
+    --foreground-accent: var(--blue-60);
+    /* Backgrounds */
+    --background-01: var(--grey-6);
+    --background-02: var(--grey-8);
+    --background-03: var(--grey-10);
+    --background-04: var(--grey-50) / 0.1; /* gray50/10 */
+    --background-05: var(--white);
+    --background-06: var(--grey-80);
+    --background-07: var(--black);
+    --background-08: var(--grey-12);
+    --background-09: var(--grey-15);
+    --background-10: var(--grey-94);
+    --background-danger: var(--red-65) / 0.1; /* red65/10 */
+    --background-success: 154 13% 10% / 0.4;
+    /* Borders */
+    --border-01: var(--grey-15);
+    --border-02: var(--grey-20);
+    --border-03: var(--grey-70);
+    --border-04: var(--grey-12);
+    --border-05: var(--grey-10);
+    --border-06: var(--grey-30);
+    --border-07: var(--grey-90);
+    --border-08: var(--white);
+    --border-09: var(--grey-60);
+    --border-10: var(--grey-6);
+    --border-danger: var(--red-65);
+    --border-success: var(--green-65);
+    /* Icons */
+    --icon-01: var(--grey-60);
+    --icon-02: var(--white);
+    --icon-03: var(--grey-80);
+    --icon-04: var(--grey-50);
+    --icon-05: var(--black);
+    --icon-06: var(--grey-30);
+    --icon-07: var(--grey-40);
+    --icon-08: var(--grey-90);
+    --icon-danger: var(--red-65);
+    --icon-alert: var(--orange-55);
+    --icon-success: var(--green-65);
+    --icon-accent: var(--blue-60);
+    /* Tags */
+    /* --gray */
+    --tag-foreground-gray-01: hsla(240, 6%, 70%, 1);
+    --tag-border-gray-01: hsla(240, 6%, 70%, 0.12);
+    --tag-background-gray-01: hsla(240, 6%, 70%, 0.1);
+    --tag-background-gray-02: hsla(240, 6%, 70%, 0.15);
+    /* --purple */
+    --tag-foreground-purple-01: hsla(268, 50%, 75%, 1);
+    --tag-border-purple-01: hsla(268, 50%, 75%, 0.12);
+    --tag-background-purple-01: hsla(268, 50%, 75%, 0.1);
+    --tag-background-purple-02: hsla(268, 50%, 75%, 0.15);
+    /* --blue */
+    --tag-foreground-blue-01: hsla(220, 100%, 60%, 1);
+    --tag-border-blue-01: hsla(220, 61%, 65%, 0.12);
+    --tag-background-blue-01: hsla(220, 61%, 65%, 0.1);
+    --tag-background-blue-02: hsla(220, 61%, 65%, 0.15);
+    /* --mint */
+    --tag-foreground-mint-01: hsla(157, 77%, 65%, 1);
+    --tag-border-mint-01: hsla(157, 77%, 65%, 0.12);
+    --tag-background-mint-01: hsla(157, 77%, 65%, 0.1);
+    --tag-background-mint-02: hsla(157, 77%, 65%, 0.15);
+    /* --amber */
+    --tag-foreground-amber-01: hsla(35, 76%, 55%, 1);
+    --tag-border-amber-01: hsla(35, 76%, 55%, 0.12);
+    --tag-background-amber-01: hsla(35, 76%, 55%, 0.1);
+    --tag-background-amber-02: hsla(35, 76%, 55%, 0.15);
+    /* --peach */
+    --tag-foreground-peach-01: hsla(15, 71%, 65%, 1);
+    --tag-border-peach-01: hsla(15, 71%, 65%, 0.12);
+    --tag-background-peach-01: hsla(15, 71%, 65%, 0.1);
+    --tag-background-peach-02: hsla(15, 71%, 65%, 0.15);
+    /* --red */
+    --tag-foreground-red-01: hsla(0, 82%, 65%, 1);
+    --tag-border-red-01: hsla(0, 81%, 60%, 0.12);
+    --tag-background-red-01: hsla(0, 81%, 60%, 0.1);
+    --tag-background-red-02: hsla(0, 81%, 60%, 0.15);
   }
 
   .dark {
@@ -110,7 +208,7 @@
     --primary-background: var(--black);
     --primary-foreground: var(--grey-10);
     --primary-muted: var(--grey-70);
-    --primary-accent: 216 100% 60%;
+    --primary-accent: 207 100% 61%;
     --secondary: var(--grey-15);
     --secondary-foreground: var(--white);
     --secondary-background: var(--grey-6);
@@ -118,6 +216,7 @@
     --tertiary: var(--grey-12);
     --tertiary-foreground: var(--white);
     --tertiary-background: var(--grey-60);
+    --tertiary-muted: var(--grey-8);
     --muted: var(--grey-15);
     --muted-foreground: var(--grey-60);
     --accent: var(--grey-15);
@@ -138,12 +237,102 @@
     --ai-button-stop-2: 335 58% 76%;
     --ai-button-stop-3: 246 66% 72%;
     --ai-button-stop-4: 188 97% 89%;
+    /* New colors design variables */
+    /* Text */
+    --foreground-01: var(--white);
+    --foreground-02: var(--grey-80);
+    --foreground-03: var(--grey-70);
+    --foreground-04: var(--grey-60);
+    --foreground-05: var(--grey-50);
+    --foreground-06: var(--black);
+    --foreground-07: var(--grey-40);
+    --foreground-08: var(--grey-90);
+    --foreground-09: var(--grey-30);
+    --foreground-danger: var(--red-65);
+    --foreground-alert: var(--orange-55);
+    --foreground-success: var(--green-65);
+    --foreground-accent: var(--blue-60);
+    /* Backgrounds */
+    --background-01: var(--grey-6);
+    --background-02: var(--grey-8);
+    --background-03: var(--grey-10);
+    --background-04: var(--grey-50) / 0.1; /* gray50/10 */
+    --background-05: var(--white);
+    --background-06: var(--grey-80);
+    --background-07: var(--black);
+    --background-08: var(--grey-12);
+    --background-09: var(--grey-15);
+    --background-10: var(--grey-94);
+    --background-danger: var(--red-65) / 0.1; /* red65/10 */
+    --background-success: 154 13% 10% / 0.4;
+    /* Borders */
+    --border-01: var(--grey-15);
+    --border-02: var(--grey-20);
+    --border-03: var(--grey-70);
+    --border-04: var(--grey-12);
+    --border-05: var(--grey-10);
+    --border-06: var(--grey-30);
+    --border-07: var(--grey-90);
+    --border-08: var(--white);
+    --border-09: var(--grey-60);
+    --border-10: var(--grey-6);
+    --border-danger: var(--red-65);
+    --border-success: var(--green-65);
+    /* Icons */
+    --icon-01: var(--grey-60);
+    --icon-02: var(--white);
+    --icon-03: var(--grey-80);
+    --icon-04: var(--grey-50);
+    --icon-05: var(--black);
+    --icon-06: var(--grey-30);
+    --icon-07: var(--grey-40);
+    --icon-08: var(--grey-90);
+    --icon-danger: var(--red-65);
+    --icon-alert: var(--orange-55);
+    --icon-success: var(--green-65);
+    --icon-accent: var(--blue-60);
+    /* Tags */
+    /* --gray */
+    --tag-foreground-gray-01: hsla(240, 6%, 70%, 1);
+    --tag-border-gray-01: hsla(240, 6%, 70%, 0.12);
+    --tag-background-gray-01: hsla(240, 6%, 70%, 0.1);
+    --tag-background-gray-02: hsla(240, 6%, 70%, 0.15);
+    /* --purple */
+    --tag-foreground-purple-01: hsla(268, 50%, 75%, 1);
+    --tag-border-purple-01: hsla(268, 50%, 75%, 0.12);
+    --tag-background-purple-01: hsla(268, 50%, 75%, 0.1);
+    --tag-background-purple-02: hsla(268, 50%, 75%, 0.15);
+    /* --blue */
+    --tag-foreground-blue-01: hsla(220, 100%, 60%, 1);
+    --tag-border-blue-01: hsla(220, 61%, 65%, 0.12);
+    --tag-background-blue-01: hsla(220, 61%, 65%, 0.1);
+    --tag-background-blue-02: hsla(220, 61%, 65%, 0.15);
+    /* --mint */
+    --tag-foreground-mint-01: hsla(157, 77%, 65%, 1);
+    --tag-border-mint-01: hsla(157, 77%, 65%, 0.12);
+    --tag-background-mint-01: hsla(157, 77%, 65%, 0.1);
+    --tag-background-mint-02: hsla(157, 77%, 65%, 0.15);
+    /* --amber */
+    --tag-foreground-amber-01: hsla(35, 76%, 55%, 1);
+    --tag-border-amber-01: hsla(35, 76%, 55%, 0.12);
+    --tag-background-amber-01: hsla(35, 76%, 55%, 0.1);
+    --tag-background-amber-02: hsla(35, 76%, 55%, 0.15);
+    /* --peach */
+    --tag-foreground-peach-01: hsla(15, 71%, 65%, 1);
+    --tag-border-peach-01: hsla(15, 71%, 65%, 0.12);
+    --tag-background-peach-01: hsla(15, 71%, 65%, 0.1);
+    --tag-background-peach-02: hsla(15, 71%, 65%, 0.15);
+    /* --red */
+    --tag-foreground-red-01: hsla(0, 82%, 65%, 1);
+    --tag-border-red-01: hsla(0, 81%, 60%, 0.12);
+    --tag-background-red-01: hsla(0, 81%, 60%, 0.1);
+    --tag-background-red-02: hsla(0, 81%, 60%, 0.15);
   }
 }
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-borders-1;
   }
 
   html {
@@ -151,7 +340,7 @@
   }
 
   body {
-    @apply bg-background text-foreground text-sm font-normal;
+    @apply bg-background-1 text-foreground-2 text-sm font-normal -tracking-[0.02em];
   }
 }
 
@@ -440,4 +629,14 @@
 .diff-tailwindcss-wrapper .scrollbar-disable {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+.sub-menu-icon-bg {
+  stop {
+    stop-color: hsla(0, 0%, 94%, 1);
+
+    & + stop {
+      stop-color: hsla(0, 0%, 61%, 1);
+    }
+  }
 }
